bootstrap-rtl.css
/* ... */
@media (max-width: 991px) {
  .navbar-toggleable-md .navbar-nav .nav-item {
    margin-right: 0;
  }
}

.card-link + .card-link {
  margin-right: 1.25rem;
}

.card-blockquote {
  border-right: 0;
}

.breadcrumb-item {
  float: right;
}

.pagination {
  padding-right: 0;
}

.page-item:first-child .page-link {
  margin-right: 0;
}

.page-link {
  margin-right: -1px;
}

.alert-dismissible {
  padding-left: 2rem;
}

.alert-dismissible .close {
  left: -1rem;
}

.media-list {
  padding-right: 0;
}

.list-group {
  padding-right: 0;
}

.embed-responsive .embed-responsive-item,
.embed-responsive iframe,
.embed-responsive embed,
.embed-responsive object,
.embed-responsive video {
  right: 0;
}

.close {
  float: left;
}

.tooltip {
  text-align: right;
}

.tooltip.tooltip-top .tooltip-arrow,
.tooltip.bs-tether-element-attached-bottom .tooltip-arrow {
  right: 50%;
  margin-right: -5px;
}

.tooltip.tooltip-bottom .tooltip-arrow,
.tooltip.bs-tether-element-attached-top .tooltip-arrow {
  right: 50%;
  margin-right: -5px;
}

.popover {
  right: 0;
  text-align: right;
}

.popover.popover-top .popover-arrow,
.popover.bs-tether-element-attached-bottom .popover-arrow {
  right: 50%;
  margin-right: -11px;
}

.popover.popover-top .popover-arrow::after,
.popover.bs-tether-element-attached-bottom .popover-arrow::after {
  margin-right: -10px;
}

.popover.popover-bottom .popover-arrow,
.popover.bs-tether-element-attached-top .popover-arrow {
  right: 50%;
  margin-right: -11px;
}

.popover.popover-bottom .popover-arrow::after,
.popover.bs-tether-element-attached-top .popover-arrow::after {
  margin-right: -10px;
}

@media all and (transform-3d), (-webkit-transform-3d) {
  .carousel-inner > .carousel-item.next,
  .carousel-inner > .carousel-item.active.right {
    right: 0;
  }

  .carousel-inner > .carousel-item.prev,
  .carousel-inner > .carousel-item.active.left {
    right: 0;
  }

  .carousel-inner > .carousel-item.next.left,
  .carousel-inner > .carousel-item.prev.right,
  .carousel-inner > .carousel-item.active {
    right: 0;
  }
}

.carousel-inner > .active {
  right: 0;
}

.carousel-inner > .next {
  right: 100%;
}

.carousel-inner > .prev {
  right: -100%;
}

.carousel-inner > .next.left,
.carousel-inner > .prev.right {
  right: 0;
}

.carousel-inner > .active.left {
  right: -100%;
}

.carousel-inner > .active.right {
  right: 100%;
}

/*.carousel-control {
  right: 0;
}

.carousel-control.right {
  left: 0;
  right: auto;
}*/

.carousel-control .icon-prev {
  right: 50%;
  margin-right: -10px;
}

.carousel-control .icon-next {
  left: 50%;
  margin-left: -10px;
}

.carousel-indicators {
  right: 50%;
  padding-right: 0;
  margin-right: -30%;
}

.carousel-caption {
  left: 15%;
  right: 15%;
  z-index: 10;
}

@media (min-width: 544px) {
  .carousel-control .icon-prev {
    margin-right: -15px;
  }

  .carousel-control .icon-next {
    margin-left: -15px;
  }

  .carousel-caption {
    left: 20%;
    right: 20%;
  }
}

